# openvm-fv

./: .gitignore  OpenvmFv.lean  README.md  VmExtensions.lean  lake-manifest.json  lakefile.lean  lakefile.toml
.github/workflows/: lean_action_ci.yml
OpenvmFv/: Basic.lean  Util.lean
OpenvmFv/Airs/: AccessAdapterAir.lean  BitwiseOperationLookupAir_8.lean  ExecutionDummyAir.lean  ExecutionState.lean  LessThanAuxCols.lean  Memory.lean  PhantomAir.lean  RangeTupleCheckerAir.lean  VariableRangeCheckerAir.lean
OpenvmFv/Constraints/: AccessAdapterAir_2.lean  BitwiseOperationLookupAir_8.lean  PhantomAir.lean  RangeTupleCheckerAir.lean  Template.lean  VariableRangeCheckerAir.lean  VmAirWrapper_alu.lean  VmAirWrapper_auipc.lean  VmAirWrapper_branch_eq.lean  VmAirWrapper_branch_lt.lean  VmAirWrapper_divrem.lean  VmAirWrapper_jallui.lean  VmAirWrapper_jalr.lean  VmAirWrapper_load_sign_extend.lean  VmAirWrapper_loadstore.lean  VmAirWrapper_lt.lean  VmAirWrapper_mul.lean  VmAirWrapper_mulh.lean  VmAirWrapper_shift.lean
OpenvmFv/Equivalence/: ALU.lean  Auipc.lean  BaseALU.lean  BaseAluCoreAir.lean  BranchEqual.lean  BranchLessThan.lean  DivRem.lean  Equivalence.lean  JalLui.lean  JalR.lean  LoadSignExtend.lean  LoadStore.lean  Lt.lean  Mul.lean  Mulh.lean  Shift.lean
OpenvmFv/Extraction/: AccessAdapterAir_2.lean  AccessAdapterAir_4.lean  BitwiseOperationLookupAir_8.lean  ExecutionDummyAir.lean  MemoryDummyAir_1.lean  PhantomAir.lean  ProgramDummyAir.lean  RangeTupleCheckerAir.lean  Template.lean  VariableRangeCheckerAir.lean  VmAirWrapper_alu.lean  VmAirWrapper_auipc.lean  VmAirWrapper_branch_eq.lean  (+11 more)
VmExtensions/: Audit.lean  Keccak.lean  lake-manifest.json  lakefile.toml
extractor/: Cargo.toml
extractor/src/: main.rs
scripts/: check_hygiene.py  rename-namespaces.sh  run-extraction.sh  run_comparator.sh  setup_comparator_toolchain.sh
(+370 files in other folders)
