[package]
name = "openvm-fv-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", features = ["lean"] }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.2" }
openvm-sdk-config = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.2" }

clap = { version = "4", features = ["derive"] }
gag = "1"
